Bug 290854 - Option to make selecting multiple files require more deliberate action.
Summary: Option to make selecting multiple files require more deliberate action.
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: view-engine: general (other bugs)
Version First Reported In: 2.0
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-01-07 08:02 UTC by Aaron Peterson
Modified: 2012-01-16 19:04 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Aaron Peterson 2012-01-07 08:02:17 UTC
Version:           2.0 (using Devel) 
OS:                Linux

I am using dolphin 2.0 on kde 4.8rc2
I notice that I can select multiple files, and then I click on a file without holding shift or control, and the file selection stays the same.

This is alarming, as I expect the selection to be what I clicked.  There is good reason to make the act of selecting multiple files require attention.

I am not saying the way windows does it is perfect, I know that it works, and me having random files be selected all the time does not work for me.

Note:  an alternate (perhaps not originally intended) purpose of selecting files is to: be a book marker, and to indicate which files have been reviewed. and to count files.



Reproducible: Always

Steps to Reproduce:
select a group, by shift clicking, dragging, or control clicking.

let up the control or shift key.  
click on one of the selected files.


Actual Results:  
all my files are still selected.  I have just accidentally selected and moved or errased my files.

I would much rather have it be just a bit more deliberate to select multiple files.



Expected Results:  
Like windows explorer. Make a selection.  Click on a file, (a mouse slip) the selection changes to the new file selected.

It looks like the designers want to make it easy to select multiple items.  This is good.   A deliberate way would be to have the file selection be like webmail, with a checkbox column to the side. People are familiar with this. 

Options are great, and for all of us who have been trained on windows, an option to loose selection on click would be very very welcome.   There is a reason why they did it that way.
Comment 1 Peter Penz 2012-01-07 10:55:15 UTC
Thanks for the report, this is a bug/regression in comparison to the old selection behavior.
Comment 2 Frank Reininghaus 2012-01-15 19:13:40 UTC
It's a side effect of my commit

http://commits.kde.org/kde-baseapps/177c5f75f06600c5b047a728700c7ff88d3104aa

I'll try to provida a fix this regression during the next 2 days.
Comment 3 Frank Reininghaus 2012-01-16 19:02:41 UTC
Git commit 9f711b5f2e1d1fd856cd6b033e6adb96f9b46d8a by Frank Reininghaus.
Committed on 16/01/2012 at 19:59.
Pushed by freininghaus into branch 'KDE/4.8'.

If an item is clicked to trigger it, clear the rest of the selection

Note that the clearing is not done on mouse press, but on mouse release.
The reason is that there are situations when multiple items are selected
and pressing the mouse on one of them should not clear the selection
(e.g., drag and drop of multiple items).
REVIEW: 103703
FIXED-IN: 4.8.0

M  +22   -0    dolphin/src/kitemviews/kitemlistcontroller.cpp
M  +1    -0    dolphin/src/kitemviews/kitemlistcontroller.h

http://commits.kde.org/kde-baseapps/9f711b5f2e1d1fd856cd6b033e6adb96f9b46d8a
Comment 4 Frank Reininghaus 2012-01-16 19:04:10 UTC
Git commit 1346234cca34409082e51f16465b196627771cac by Frank Reininghaus.
Committed on 16/01/2012 at 19:59.
Pushed by freininghaus into branch 'master'.

If an item is clicked to trigger it, clear the rest of the selection

Note that the clearing is not done on mouse press, but on mouse release.
The reason is that there are situations when multiple items are selected
and pressing the mouse on one of them should not clear the selection
(e.g., drag and drop of multiple items).
REVIEW: 103703
FIXED-IN: 4.8.0
(cherry picked from commit 9f711b5f2e1d1fd856cd6b033e6adb96f9b46d8a)

M  +22   -0    dolphin/src/kitemviews/kitemlistcontroller.cpp
M  +1    -0    dolphin/src/kitemviews/kitemlistcontroller.h

http://commits.kde.org/kde-baseapps/1346234cca34409082e51f16465b196627771cac